# jarvis

./: .gitignore  BLOCKCHAIN.md  BUILD_SUCCESS.md  CHANGELOG.md  CLAUDE.md  CLEAN_BUILD_STATUS.md  Cargo.toml  GCC-IMPLEMENTATION.md  GHOSTCHAIN_INTEGRATION_ASSESSMENT.md  GHOSTCHAIN_QUICK_SETUP.md  GHOSTFLOW_INTEGRATION_COMPLETE.md  IMPLEMENTATION_COMPLETE.md  JARVIS_ZQLITE_MIGRATION.md  NOTES.md  README.md  ROADMAP.md  TODO.md  ZQLITE.md  fix_jarvis.py  jarvis.toml.example
.github/workflows/: ci.yml  main.yml
assets/icons/arch/: PKGBUILD
assets/icons/debian/: control
assets/icons/linux/: jarvis.desktop
assets/icons/macos/: jarvis.icns
deployment/: README.md  deploy.sh  docker-compose.yml
deployment/config/: jarvisd.toml
deployment/docker/: Dockerfile.jarvisd  docker-compose.nvidia.yml  docker-compose.yml
deployment/lxc/: deploy-agent.sh  jarvis-agent-template.conf  setup-agent.sh
deployment/systemd/: jarvisd.service
docs/: AGENT_ARCHITECTURE_DEFINITION.md  BRAINSTORM.md  DEVELOPMENT_ROADMAP.md  DOCS.md  GHOSTCHAIN_QUICK_SETUP.md  GHOST_STACK_INTEGRATION.md  JARVISD_IMPLEMENTATION_COMPLETE.md  OMEN_INTEGRATION.md  README.md  UNIFIED_AI_ARCHITECTURE.md  USAGE_EXAMPLES.md  ZQLITE_INTEGRATION.md  jarvis.toml.example
jarvis-agent/: Cargo.toml
jarvis-agent/src/: ai_analyzer.rs  blockchain_monitor.rs  lib.rs  orchestrator.rs  runner.rs  tools.rs
jarvis-arch/: Cargo.toml  PKGBUILD  jarvis-arch.install  jarvis-arch.service  jarvis-arch.sysusers  jarvis-arch.tmpfiles  jarvis-arch.toml
jarvis-arch/src/: config.rs  lib.rs  package_manager.rs  wazuh.rs  zqlite_integration.rs
jarvis-core/: Cargo.toml  build.rs
jarvis-core/migrations/: 20240101000000_initial.sql
jarvis-core/proto/ghostchain/: blockchain.proto  network.proto  transaction.proto
jarvis-core/src/: agent_mesh.rs  blockchain.rs  blockchain_agents.rs  config.rs  context.rs  contract_maintenance.rs  deployment.rs  error.rs  grpc_client.rs  health.rs  lib.rs  llm.rs  maintenance_agents.rs  memory.rs  network.rs  skills.rs  specialized_agents.rs  tests.rs  types.rs
jarvis-core/src/blockchain/: ghostchain.rs
jarvis-core/src/llm/: mod.rs  ollama_client.rs  omen_client.rs
jarvis-core/src/mcp/: mod.rs  server.rs  tools.rs
jarvis-core/src/nlp/: mod.rs
jarvis-core/tests/: integration_tests.rs
jarvis-ghostflow/: Cargo.toml
jarvis-ghostflow/src/: api.rs  config.rs  integration.rs  lib.rs  network.rs  types.rs  workflow_engine.rs
jarvis-ghostflow/src/ffi/: ghostllm.rs  mod.rs
jarvis-ghostflow/src/nodes/: blockchain.rs  llm_router.rs  memory.rs  mod.rs  orchestrator.rs
jarvis-nv/: BUILD_STATUS.md  Cargo.toml  Dockerfile  README.md  STATUS.md  build.rs  config.example.toml  docker-compose.yml  prometheus.yml
jarvis-nv/certs/: cert.pem  key.pem
jarvis-nv/proto/: ghostbridge.proto
jarvis-nv/src/: agent.rs  ai.rs  bridge.rs  config.rs  gpu.rs  main.rs  metrics.rs  node.rs  nvcore.rs  orchestrator.rs  web5.rs
jarvis-nvim/: Cargo.toml  README.md  plugin.lua
jarvis-nvim/lua/jarvis/: config.lua  init.lua
jarvis-nvim/src/: ai_integration.rs  chat_interface.rs  code_actions.rs  lib.rs  lsp.rs  main.rs  nvim_client.rs  plugin.rs
jarvis-shell/: Cargo.toml
jarvis-shell/src/: environment.rs
src/: main.rs
src/commands/: blockchain.rs  mod.rs
