[package]
name = "jarvis"
version = "0.2.0"
edition = "2024"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
description = "Your local AI assistant for Rust, Linux, and Homelab operations"
license = "MIT"
repository = "https://github.com/ghostkellz/jarvis"

[[bin]]
name = "jarvis"
path = "src/main.rs"

[[bin]]
name = "jarvisd"
path = "src/bin/jarvisd.rs"

[workspace]
members = [
    "jarvis-core",
    "jarvis-agent", 
    "jarvis-shell",
    "jarvis-nvim",
    "jarvis-nv"
]

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive", "env"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
config = "0.14"
dirs = "5.0"

# System Integration  
sysinfo = "0.30"
which = "4.4"
shellexpand = "3.1"

# LLM Integration
reqwest = { version = "0.11", features = ["json", "stream"] }
ollama-rs = "0.1"

# Memory/Storage
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }

# gRPC and HTTP/3 Support
tonic = { version = "0.11", features = ["tls", "transport"] }
prost = "0.12"
tonic-build = "0.11"
h3 = "0.0.4"
h3-quinn = "0.0.4"
quinn = { version = "0.10", features = ["tls-rustls"] }

# Network and Protocol Support
rustls = { version = "0.21", features = ["quic"] }
tokio-rustls = "0.24"
futures-util = "0.3"

# IPv6 and Network Optimization
socket2 = { version = "0.5", features = ["all"] }
trust-dns-resolver = { version = "0.23", features = ["dns-over-https", "dns-over-tls", "dns-over-rustls", "dns-over-https-rustls"] }

# Workspace crates
jarvis-core = { path = "jarvis-core" }
jarvis-agent = { path = "jarvis-agent" }
jarvis-shell = { path = "jarvis-shell" }
