[package]
name = "jarvis-agent"
version = "0.1.0"
edition = "2024"
description = "Plugin runner and command router for Jarvis"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait = "0.1"
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }

# System operations
sysinfo = "0.30"
which = "4.4"
tempfile = "3.8"

jarvis-core = { path = "../jarvis-core" }
jarvis-shell = { path = "../jarvis-shell" }
