[package]
name = "jarvis-core"
version = "0.2.0"
edition = "2024"
description = "Core CLI and LLM engine for Jarvis"

[dependencies]
# CLI Framework
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"

# Configuration
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"

# LLM Integration
reqwest = { version = "0.11", features = ["json", "stream"] }
ollama-rs = "0.1"
async-trait = "0.1"

# Memory/Storage
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "sqlite", "migrate", "chrono"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
shellexpand = "3.1"
futures = "0.3"
serde_json = "1.0"
md5 = "0.7"

# gRPC Support
tonic = { version = "0.10", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"

# Network Support  
tokio-rustls = "0.24"
futures-util = "0.3"

# IPv6 and Network Optimization
socket2 = { version = "0.5", features = ["all"] }

[dev-dependencies]
tempfile = "3.8"

[build-dependencies]
tonic-build = "0.10"
