[package]
name = "jarvis-ghostflow"
version = "0.1.0"
edition = "2021"
authors = ["Christopher Kelley <ckelley@ghostkellz.sh>"]
description = "GhostFlow integration layer for Jarvis AI functionality"
license = "MIT"

[dependencies]
# Core Jarvis dependencies
jarvis-core = { path = "../jarvis-core" }
jarvis-agent = { path = "../jarvis-agent" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"
futures-util = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP/Network
reqwest = { version = "0.11", features = ["json", "stream"] }
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Database
sqlx = { version = "0.8.1", features = ["runtime-tokio-rustls", "postgres", "sqlite", "migrate", "chrono", "uuid"] }

# Time and UUID
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Configuration
config = "0.14"
dirs = "5.0"

# QUIC/HTTP3 support
quinn = { version = "0.10", features = ["tls-rustls"] }
rustls = { version = "0.21", features = ["quic"] }
h3 = "0.0.4"
h3-quinn = "0.0.4"

# WebSocket for real-time updates
tokio-tungstenite = { version = "0.20", features = ["native-tls"] }

# Metrics and monitoring
prometheus = "0.13"