[package]
name = "jarvis-nvim"
version = "0.2.0"
edition = "2024"
description = "Neovim plugin for Jarvis AI assistant"

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "jarvis-nvim"
path = "src/main.rs"

[dependencies]
# Core Jarvis
jarvis-core = { path = "../jarvis-core" }
jarvis-agent = { path = "../jarvis-agent" }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Neovim integration
nvim-rs = { version = "0.6", features = ["use_tokio"] }
rmpv = "1.0"

# LSP support
tower-lsp = "0.20"
lsp-types = "0.95"

# File system operations
notify = "6.0"
ignore = "0.4"

# Plugin framework
mlua = { version = "0.9", features = ["lua54", "async", "serialize"] }
