[package]
name = "jarvis-shell"
version = "0.2.0"
edition = "2024"
description = "User environment detection and dotfile hooks for Jarvis"

[dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }

# Environment detection
dirs = "5.0"
shellexpand = "3.1"
git2 = "0.18"
hostname = "0.4"
which = "4.4"

jarvis-core = { path = "../jarvis-core" }
